# quasicrystal

./: .gitignore  BMP.cpp  BMP.hpp  CMakeLists.txt  Config.cpp  Config.hpp  LICENSE.md  README.md  build.sh  crystal.cpp  defs.hpp  euclidean2d.hpp  make_gif.sh  render.cpp  render.hpp  simd_vec.hpp  utils.hpp
